--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,5 @@
+@import url("pics.css");
+
 .widget {
     display: flex;
     width: 800px;
@@ -5,13 +7,13 @@
     padding: 20px;
 }
 
-.task-wrapper, .buttons {
+.task-wrapper {
     display: flex;
     flex-direction: row;
     border: 1px solid black;
 }
 
-.task-wrapper{
+.task-wrapper {
     width: 100%;
 }
 
@@ -19,21 +21,17 @@
     display: flex;
     width: 65%;
     padding: 10px;
-    flex-wrap: wrap;
     border-right: 1px solid black;
 }
 
-.shortDescr{
+.shortDescr {
     width: 100%;
-    display:inline;
-
-    white-space: normal;
     word-wrap: break-word;
 }
 
-.date{
+.date {
     display: flex;
     flex-direction: column;
     padding: 10px;
+    border-right: 1px solid black;
 }
-
