--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
 @import url('./global.css');
 @import url('./effects.css');
 @import url('./fonts.css');
+@import url('./modalWindow.css');
 
 .widget {
     display: flex;
