--- a/src/css/global.css
+++ b/src/css/global.css
@@ -48,3 +48,18 @@ select::-ms-expand {
     display: none;
 }
 
+textarea {
+    outline: none;
+    -moz-appearance: none;
+    border: 1px solid #999; /* указание этого свойства также удалит обводку в FireFox */
+}
+
+.modal-buttons {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+}
+
+#confirm-task-changes{
+    margin-right: 150px;
+}
