--- a/src/css/modalWindow.css
+++ b/src/css/modalWindow.css
@@ -15,14 +15,23 @@
     margin-bottom: 5%;
 }
 
+.task-short-content{
+    width: 600px;
+    height: 50px;
+    resize: none;
+    margin-bottom: 20px;
+}
+
+
 .task-content {
     width: 600px;
     height: 200px;
     resize: vertical;
 }
 
-.task-short-content{
-    width: 600px;
-    height: 50px;
-    resize: none;
+.modal-buttons{
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
+
+
