--- a/src/css/modalWindow.css
+++ b/src/css/modalWindow.css
@@ -5,17 +5,17 @@
     margin: auto;
 }
 
-#edit-window label{
+#edit-window label {
     margin: auto;
 }
 
-#edit-window h3{
+#edit-window h3 {
     margin-left: 3%;
     margin-top: 3%;
     margin-bottom: 5%;
 }
 
-.task-short-content{
+.task-short-content {
     width: 600px;
     height: 50px;
     resize: none;
@@ -29,9 +29,24 @@
     resize: vertical;
 }
 
-.modal-buttons{
-    margin-top: 30px;
-    margin-bottom: 30px;
+.modal-buttons {
+    margin: 30px auto;
 }
 
+.modal-buttons {
+    display: flex;
+    flex-direction: row;
+}
+
+#confirm-task-changes {
+    margin-right: 150px;
+}
+
+.window-descr-short h4, .window-descr-long h4{
+    margin-bottom: 2%;
+}
+
+#edit-window{
+    display: none;
+}
 
