add status dd in modal window

--- a/src/css/modalWindow.css
+++ b/src/css/modalWindow.css
@@ -20,6 +20,7 @@
     height: 50px;
     resize: none;
     margin-bottom: 20px;
+    padding: 5px;
 }
 
 
@@ -27,6 +28,7 @@
     width: 600px;
     height: 200px;
     resize: vertical;
+    padding: 5px;
 }
 
 .modal-buttons {
@@ -44,6 +46,19 @@
 
 .window-descr-short h4, .window-descr-long h4{
     margin-bottom: 2%;
+}
+
+.shortDescr-status-wrapper{
+    display: flex;
+    flex-direction: row;
+}
+
+.shortDescr-status-wrapper h4{
+    margin-right: 50px;
+}
+
+.status-dd{
+    margin-left: 5px;
 }
 
 #edit-window{
