--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
 @import url('./effects.css');
 @import url('./fonts.css');
 @import url('./modalWindow.css');
+@import url('./dropdown_status.css');
 
 .widget {
     display: flex;
