--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,8 +2,11 @@
 @import url('./global.css');
 @import url('./effects.css');
 @import url('./fonts.css');
-@import url('./modalWindow.css');
-@import url('./dropdown_status.css');
+
+@import url('./modal/modalWin_main.css');
+@import url('./modal/modalWin_l.css');
+@import url('./modal/modalWin_r.css');
+@import url('./modal/dropdown_status.css');
 
 .widget {
     display: flex;
