--- a/src/css/modal/modalWin_main.css
+++ b/src/css/modal/modalWin_main.css
@@ -5,30 +5,18 @@
     margin: auto;
 }
 
+.modal-main{
+    display: flex;
+    flex-direction: row;
+}
+
 #edit-window label {
     margin: auto;
 }
 
 #edit-window h3 {
-    margin-left: 3%;
     margin-top: 3%;
     margin-bottom: 5%;
-}
-
-.task-short-content {
-    width: 600px;
-    height: 50px;
-    resize: none;
-    margin-bottom: 20px;
-    padding: 5px;
-}
-
-
-.task-content {
-    width: 600px;
-    height: 200px;
-    resize: vertical;
-    padding: 5px;
 }
 
 .modal-buttons {
@@ -54,12 +42,10 @@
 }
 
 .shortDescr-status-wrapper h4 {
-    margin-right: 50px;
+    margin-right: 10px;
 }
 
-.status-dd {
-    margin-left: 5px;
-}
+
 
 #edit-window {
     display: none;
