--- a/src/css/pics.css
+++ b/src/css/pics.css
@@ -28,3 +28,11 @@
     height: 40px;
     margin: auto;
 }
+
+.add-new-task{
+    background-image: url("../pics/add_w.png");
+    background-size: 45px auto;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+}
